# High-Frtequency-Trading-Patterns

high-frequency-trading-patterns/: .gitignore  CI_CD_USAGE.md  Cargo.toml  ENHANCED_RISK.md  INSTRUCTIONS.md  MASTER-RUN-README.md  Makefile.toml  PRODUCT_DAILY.md  PRODUCT_FEATURES.md  PRODUCT_ROADMAP.md  README.md  TROUBLESHOOTING.md  deny.toml  generate-crates.ps1  master-run.ps1  master-run.sh  noted.md  project_layout.md
high-frequency-trading-patterns/.github/: README.md
high-frequency-trading-patterns/.github/workflows/: cd.yml  ci.yml  quality.yml
high-frequency-trading-patterns/crates/auction-imbalance-alpha/: Cargo.toml
high-frequency-trading-patterns/crates/cross-asset-latency-lead/: Cargo.toml
high-frequency-trading-patterns/crates/dark-midpoint-arb/: Cargo.toml
high-frequency-trading-patterns/crates/event-news-algo/: Cargo.toml
high-frequency-trading-patterns/crates/flow-anticipation/: Cargo.toml
high-frequency-trading-patterns/crates/hft-common/: Cargo.toml
high-frequency-trading-patterns/crates/hft-common/benches/: pattern_benchmarks.rs
high-frequency-trading-patterns/crates/hft-common/src/: config.rs  enhanced_arb.rs  enhanced_mm.rs  enhanced_risk.rs  lib.rs  models.rs  monitoring.rs  prelude.rs
high-frequency-trading-patterns/crates/index-etf-basis-arb/: Cargo.toml
high-frequency-trading-patterns/crates/inventory-aware-exec/: Cargo.toml
high-frequency-trading-patterns/crates/inventory-aware-exec/src/: risk.rs
high-frequency-trading-patterns/crates/last-look-fx/: Cargo.toml
high-frequency-trading-patterns/crates/last-look-fx/src/: simulator.rs
high-frequency-trading-patterns/crates/latency-arbitrage/: Cargo.toml
high-frequency-trading-patterns/crates/liquidity-detection-scout/: Cargo.toml
high-frequency-trading-patterns/crates/liquidity-mirroring/: Cargo.toml
high-frequency-trading-patterns/crates/market-making/: Cargo.toml
high-frequency-trading-patterns/crates/market-making/src/: main.rs  simulator.rs
high-frequency-trading-patterns/crates/momentum-ignition/: Cargo.toml
high-frequency-trading-patterns/crates/opening-gap-fade/: Cargo.toml
high-frequency-trading-patterns/crates/options-vol-arb/: Cargo.toml
high-frequency-trading-patterns/crates/orderbook-ml-microstructure/: Cargo.toml
high-frequency-trading-patterns/crates/orderbook-ml-microstructure/src/: strategy.rs
high-frequency-trading-patterns/crates/queue-dynamics/: Cargo.toml
high-frequency-trading-patterns/crates/quote-stuffing/: Cargo.toml
high-frequency-trading-patterns/crates/quote-stuffing/src/: main.rs
high-frequency-trading-patterns/crates/rebate-fee-arb/: Cargo.toml
high-frequency-trading-patterns/crates/sor-venue-alpha/: Cargo.toml
high-frequency-trading-patterns/crates/spoofing-layering/: Cargo.toml
high-frequency-trading-patterns/crates/statistical-arbitrage/: Cargo.toml
high-frequency-trading-patterns/crates/statistical-arbitrage/src/: main.rs  simulator.rs
high-frequency-trading-patterns/crates/stop-trigger-hunting/: Cargo.toml
high-frequency-trading-patterns/crates/triangular-cross-exchange-arb/: Cargo.toml
high-frequency-trading-patterns/crates/wash-painting/: Cargo.toml
high-frequency-trading-patterns/docs/: IMPLEMENTATION_SUMMARY.md  MEDIUM_TERM_IMPLEMENTATION_SUMMARY.md  PATTERN_DOCUMENTATION.md
high-frequency-trading-patterns/tests/: enhanced_risk_tests.rs  integration_tests.rs  market_making_test.rs
sniper-rs/sniper-rs/: COMMUNITY_GUIDE.MD  Cargo.toml  ENTERPRISE_FEATURES_OVERVIEW.MD  FINAL_LONG_TERM_VERIFICATION.MD  FINAL_SUMMARY.MD  LONG_TERM_FEATURES_SUMMARY.MD  PHASE3_SUMMARY.MD  PHASE4_SUMMARY.MD  PHASE5_COMPLETION_CONFIRMATION.MD  PHASE5_SUMMARY.MD  PHASE6_AND_LONGTERM_VERIFICATION.MD  PHASE6_FINAL_VERIFICATION.MD  PHASE6_SUMMARY.MD  PHASE6_VERIFICATION.MD  PORT_RUNNERS.md  PRODUCT_ROADMAP.MD  PROFESSIONAL_SERVICES.MD  WEB_SERVICES_SUMMARY.md
sniper-rs/sniper-rs/DESKTOP_APP/: README.MD
sniper-rs/sniper-rs/MOBILE_APP/: README.MD
sniper-rs/sniper-rs/TUTORIALS/: first_strategy.MD  signal_processors.MD
sniper-rs/sniper-rs/benches/: gas_bidding.rs  risk_evaluation.rs  router_price_impact.rs  signal_processing.rs
sniper-rs/sniper-rs/crates/sniper-ai/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-ai/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-ai/tests/: integration.rs
sniper-rs/sniper-rs/crates/sniper-amm/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-compliance/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-compliance/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-core/src/: cache.rs  lib.rs
sniper-rs/sniper-rs/crates/sniper-exec/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-exec/src/: exec_mempool.rs  exec_mev_bundle.rs  exec_private.rs  gas.rs  lib.rs  load_balancer.rs  mev.rs  nonce.rs
sniper-rs/sniper-rs/crates/sniper-liquidity/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-liquidity/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-liquidity/tests/: integration.rs
sniper-rs/sniper-rs/crates/sniper-market/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-market/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-monitoring/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-monitoring/src/: lib.rs
sniper-rs/sniper-rs/crates/sniper-orders/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-plugin/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-portfolio/: Cargo.toml
sniper-rs/sniper-rs/crates/sniper-users/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-ai/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-compliance/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-gateway/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-liquidity/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-market/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-monitoring/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-orders/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-plugin/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-portfolio/: Cargo.toml
sniper-rs/sniper-rs/crates/svc-users/: Cargo.toml
sniper-rs/sniper-rs/tests/: phase4_integration.rs  phase6_comprehensive.rs  phase6_integration.rs  web_services_integration.rs
(+22 files in other folders)
