[workspace]
members = [
  "crates/market-making",
  "crates/statistical-arbitrage",
  "crates/index-etf-basis-arb",
  "crates/triangular-cross-exchange-arb",
  "crates/latency-arbitrage",
  "crates/event-news-algo",
  "crates/dark-midpoint-arb",
  "crates/liquidity-detection-scout",
  "crates/rebate-fee-arb",
  "crates/queue-dynamics",
  "crates/auction-imbalance-alpha",
  "crates/options-vol-arb",
  "crates/inventory-aware-exec",
  "crates/orderbook-ml-microstructure",
  "crates/sor-venue-alpha",
  "crates/flow-anticipation",
  "crates/liquidity-mirroring",
  "crates/momentum-ignition",
  "crates/spoofing-layering",
  "crates/quote-stuffing",
  "crates/wash-painting",
  "crates/last-look-fx",
  "crates/stop-trigger-hunting",
  "crates/opening-gap-fade",
  "crates/cross-asset-latency-lead",
  "crates/hft-common",
]
resolver = "2"