[package]
name = "hft-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
tokio   = { version = "1.38", features = ["full"] }
tracing = "0.1"
serde   = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pattern_benchmarks"
harness = false