[package]
name = "sniper-liquidity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sniper-core = { path = "../sniper-core" }
sniper-chain = { path = "../sniper-chain" }
sniper-amm = { path = "../sniper-amm" }