[package]
name = "svc-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sniper-ai = { path = "../sniper-ai" }
sniper-core = { path = "../sniper-core" }
sniper-plugin = { path = "../sniper-plugin" }