[package]
name = "svc-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sniper-core = { path = "../sniper-core" }
sniper-portfolio = { path = "../sniper-portfolio" }
sniper-storage = { path = "../sniper-storage" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true, features = ["v4"] }